[gd_scene load_steps=4 format=2]

[ext_resource path="res://Sprites/Enemies/Sporeshroom/Spore.png" type="Texture" id=1]
[ext_resource path="res://Enemies/Spore.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 7.40957

[node name="Spore" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 3, 3 )
texture = ExtResource( 1 )

[node name="TrapArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="TrapArea"]
shape = SubResource( 1 )
[connection signal="area_entered" from="TrapArea" to="." method="_on_TrapArea_area_entered"]
[connection signal="body_entered" from="TrapArea" to="." method="_on_TrapArea_body_entered"]
